5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1602_1014.log
== TEST (2019-03-22 22:53:31) 
-- CODE:
a = int(input("total de vendas"))

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:54:51) 
-- CODE:
a = int(input("total de vendas"))
b = 0.30 * a
print 

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:55:07) 
-- CODE:
a = int(input("total de vendas"))
b = 0.30 * a
print (b)

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:55:12) 
-- CODE:
a = int(input("total de vendas"))
b = 0.30 * a
print (b)

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.18605
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:59:24) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2)

# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
File "XXXX", line 7
    
                                                                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:59:39) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2)


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:59:47) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2)


-- EXECUTION TIME:
0.1838
-- ERROR:
  File "/home/codebench/codes/1602/1014/main.py", line 5
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:00:22) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2)


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:00:28) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2)


-- EXECUTION TIME:
0.161272
-- ERROR:
  File "/home/codebench/codes/1602/1014/main.py", line 5
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:00:34) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2)


-- EXECUTION TIME:
0.11733
-- ERROR:
  File "/home/codebench/codes/1602/1014/main.py", line 5
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:00:39) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2)


-- EXECUTION TIME:
0.131816
-- ERROR:
  File "/home/codebench/codes/1602/1014/main.py", line 5
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:00:51) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2)


-- EXECUTION TIME:
0.200491
-- ERROR:
  File "/home/codebench/codes/1602/1014/main.py", line 5
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:01:57) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2)


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:03:23) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100)*a
print(round(b, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:03:29) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100)*a
print(round(b, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:03:35) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100)*a
print(round(b, 2))


-- EXECUTION TIME:
0.115816
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:03:51) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:04:02) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b, 2))


-- EXECUTION TIME:
0.143998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:04:53) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b,  2))


-- EXECUTION TIME:
0.142533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:04:58) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b,  2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:05:07) 
-- CODE:
a = int(input("total de vendas"))
b = (30/100) * a
print(round(b,  2))


-- EXECUTION TIME:
0.197414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:05:32) 
-- CODE:
a = int(input("total de vendas"))
b = 30/100 * a
print(round(b, 2))


-- EXECUTION TIME:
0.114859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:06:03) 
-- CODE:
a = float(input("total de vendas"))
b = (30/100) * a
print(round(b, 2))


-- EXECUTION TIME:
0.135336
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
total de vendas210.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:06:10) 
-- CODE:
a = float(input("total de vendas"))
b = (30/100) * a
print(round(b, 2))


-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:06:23) 
-- CODE:
a = float(input("total de vendas"))
b = (30/100) * a
print(round(b, 2))


-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:06:30) 
-- CODE:
a = float(input("total de vendas"))
b = (30/100) * a
print(round(b, 2))


-- EXECUTION TIME:
0.159326
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
